Fix imputs aligning

--- a/src/components/SubAccounts/SubAccount/SubUsersAdd/_SubUsersAdd.scss
+++ b/src/components/SubAccounts/SubAccount/SubUsersAdd/_SubUsersAdd.scss
@@ -11,8 +11,6 @@
       border-bottom: 1px solid var(--borderColor);
 
       & > * {
-        align-self: flex-end;
-
         &:not(:last-child) {
           margin-right: 15px;
           margin-bottom: 15px;
